--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -1,128 +1,192 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé" />
+    <meta name="robots" content="noindex, nofollow" />
+    <title>Descubra Muriaé - Login</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé">
-  <meta name="robots" content="noindex, nofollow">
-  <title>Descubra Muriaé - Login</title>
+    <!-- Estilo do Bootstrap via CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-..."
+      crossorigin="anonymous"
+    />
 
-  <!-- Estilo do Bootstrap via CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-..." crossorigin="anonymous">
+    <link href="../CSS/login.css" rel="stylesheet" />
+  </head>
 
-  <link href="../CSS/login.css" rel="stylesheet">
-</head>
-
-<body class="login-background bg-body-tertiary d-flex align-items-center justify-content-center py-4">
-  <!-- FORMULÁRIO INICIALMENTE ESCONDIDO -->
-  <form method="POST" action="../PHP/cadastro.php" id="formCadastro" class="form-container shadow rounded-4 bg-white d-none">
-    <input type="hidden" name="tipoCadastro" id="tipoCadastro" />
-    <div class="text-center">
-      <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70" class="mb-4" />
-    </div>
-    <h1 class="text-center h3 mb-3 fw-normal">Cadastro</h1>
-
-    <!-- NOME COMPLETO DO USUÁRIO -->
-    <div class="form-floating mb-2">
-      <input type="text" class="form-control form-control-sm bg-form-login" id="nome" name="nome"
-        placeholder="Seu nome completo" autocomplete="off" required />
-      <label for="nome">Nome completo</label>
-    </div>
-    <!-- ------------------------- -->
-    <div class="row">
-      <div class="col-md-6">
-        <!-- CPF DO USUÁRIO -->
-        <div class="form-floating mb-2" id="campoCPF">
-          <input type="text" class="form-control form-control-sm bg-form-login" id="cpf" name="cpf"
-            placeholder="Seu CPF" autocomplete="off" />
-          <label for="cpf">CPF</label>
-        </div>
-        <!-- --------------- -->
-
-        <!-- CNPJ DO USUÁRIO -->
-        <div class="form-floating mb-2 d-none" id="campoCNPJ">
-          <input type="text" class="form-control form-control-sm bg-form-login" id="cnpj" name="cnpj"
-            placeholder="Seu CNPJ" autocomplete="off" />
-          <label for="cnpj">CNPJ</label>
-        </div>
-        <!-- --------------- -->
-
-        <!-- EMAIL DO USUARIO -->
-        <div class="form-floating mb-2">
-          <input type="email" class="form-control form-control-sm bg-form-login" id="email" name="email"
-            placeholder="nome@exemplo.com" autocomplete="off" required />
-          <label for="email">Email</label>
-        </div>
-        <!-- ----------------- -->
+  <body
+    class="login-background bg-body-tertiary d-flex align-items-center justify-content-center py-4"
+  >
+    <!-- FORMULÁRIO INICIALMENTE ESCONDIDO -->
+    <form
+      method="POST"
+      action="../PHP/cadastro.php"
+      id="formCadastro"
+      class="form-container shadow rounded-4 bg-white d-none"
+    >
+      <input type="hidden" name="tipoCadastro" id="tipoCadastro" />
+      <div class="text-center">
+        <img
+          src="../IMG/logo_descubra_short.png"
+          alt="Logo Descubra Muriaé"
+          width="70"
+          height="70"
+          class="mb-4"
+        />
       </div>
-      <div class="col-md-6">
-        <!-- SENHA DO USUÁRIO -->
-        <div class="form-floating mb-2">
-          <input type="password" class="form-control form-control-sm bg-form-login" id="senha" name="senha"
-            placeholder="Senha" autocomplete="off" required />
-          <label for="senha">Digite sua senha</label>
-        </div>
+      <h1 class="text-center h3 mb-3 fw-normal">Cadastro</h1>
 
-        <div class="form-floating mb-2">
-          <input type="password" class="form-control form-control-sm bg-form-login" id="senhaverif" name="senhaverif"
-            placeholder="Senha" autocomplete="off" required />
-          <label for="senhaverif">Repita sua senha</label>
+      <!-- NOME COMPLETO DO USUÁRIO -->
+      <div class="form-floating mb-2">
+        <input
+          type="text"
+          class="form-control form-control-sm bg-form-login"
+          id="nome"
+          name="nome"
+          placeholder="Seu nome completo"
+          autocomplete="off"
+          required
+        />
+        <label for="nome">Nome completo</label>
+      </div>
+      <!-- ------------------------- -->
+      <div class="row">
+        <div class="col-md-6">
+          <!-- CPF DO USUÁRIO -->
+          <div class="form-floating mb-2" id="campoCPF">
+            <input
+              type="text"
+              class="form-control form-control-sm bg-form-login"
+              id="cpf"
+              name="cpf"
+              placeholder="Seu CPF"
+              autocomplete="off"
+            />
+            <label for="cpf">CPF</label>
+          </div>
+          <!-- --------------- -->
+
+          <!-- CNPJ DO USUÁRIO -->
+          <div class="form-floating mb-2 d-none" id="campoCNPJ">
+            <input
+              type="text"
+              class="form-control form-control-sm bg-form-login"
+              id="cnpj"
+              name="cnpj"
+              placeholder="Seu CNPJ"
+              autocomplete="off"
+            />
+            <label for="cnpj">CNPJ</label>
+          </div>
+          <!-- --------------- -->
+
+          <!-- EMAIL DO USUARIO -->
+          <div class="form-floating mb-2">
+            <input
+              type="email"
+              class="form-control form-control-sm bg-form-login"
+              id="email"
+              name="email"
+              placeholder="nome@exemplo.com"
+              autocomplete="off"
+              required
+            />
+            <label for="email">Email</label>
+          </div>
+          <!-- ----------------- -->
+        </div>
+        <div class="col-md-6">
+          <!-- SENHA DO USUÁRIO -->
+          <div class="form-floating mb-2">
+            <input
+              type="password"
+              class="form-control form-control-sm bg-form-login"
+              id="senha"
+              name="senha"
+              placeholder="Senha"
+              autocomplete="off"
+              required
+            />
+            <label for="senha">Digite sua senha</label>
+          </div>
+
+          <div class="form-floating mb-2">
+            <input
+              type="password"
+              class="form-control form-control-sm bg-form-login"
+              id="senhaverif"
+              name="senhaverif"
+              placeholder="Senha"
+              autocomplete="off"
+              required
+            />
+            <label for="senhaverif">Repita sua senha</label>
+          </div>
+          <!-- ---------------- -->
+        </div>
+        <!-- DICA DE SENHA -->
+        <div class="form-text text-muted mb-3 d-none" id="senhaDica">
+          <span class="form-text text-muted mt-3 d-none">
+            <a>A senha deve conter :</a>
+            <ul class="mb-0">
+              <li>Conter 8 a 20 caracteres</li>
+              <li>Conter letras e números</li>
+              <li>Caracter especial</li>
+            </ul>
+          </span>
         </div>
         <!-- ---------------- -->
-
       </div>
-      <!-- DICA DE SENHA -->
-      <div class="form-text text-muted mb-3 d-none" id="senhaDica">
-        <span class="form-text text-muted mt-3 d-none">
-          <a>A senha deve conter :</a>
-          <ul class="mb-0">
-            <li>Conter 8 a 20 caracteres</li>
-            <li>Conter letras e números</li>
-            <li>Caracter especial</li>
-          </ul>
-        </span>
+      <div class="d-flex gap-3 align-items-center justify-content-center mb-4">
+        <a href="#" class="link-primary text-decoration-none fs-7">Recuperar senha</a>
+        <a href="login.html" class="link-primary text-decoration-none fs-7">Já tenho uma conta</a>
       </div>
-      <!-- ---------------- -->
-    </div>
-    <div class="d-flex gap-3 align-items-center justify-content-center mb-4">
-      <a href="#" class="link-primary text-decoration-none fs-7">Recuperar senha</a>
-      <a href="login.html" class="link-primary text-decoration-none fs-7">Já tenho uma conta</a>
-    </div>
 
-    <div class="form-check form-switch text-start mt-3 mb-4">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" />
-      <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar senha</label>
-    </div>
-    <button type="submit" class="btn btn-custom w-100 py-2">Cadastrar</button>
-    <p class="mt-5 mb-3 text-body-secondary text-center">&copy; Descubra Muriaé - 2025</p>
-  </form>
-  <!-- MODAL -->
-  <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content p-4">
-        <div class="d-flex align-items-center justify-content-center  modal-header border-0">
-          <h5 class="modal-title" id="modalLabel">Escolha o tipo de cadastro</h5>
-        </div>
-        <div class="modal-body d-flex justify-content-around">
-          <button id="btnPF" type="button" class="btn btn-custom">Pessoa Física</button>
-          <button id="btnPJ" type="button" class="btn btn-custom">Pessoa Jurídica</button>
+      <div class="form-check form-switch text-start mt-3 mb-4">
+        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" />
+        <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar senha</label>
+      </div>
+      <button type="submit" class="btn btn-custom w-100 py-2">Cadastrar</button>
+      <p class="mt-5 mb-3 text-body-secondary text-center">&copy; Descubra Muriaé - 2025</p>
+    </form>
+    <!-- MODAL -->
+    <div
+      class="modal fade"
+      id="staticBackdrop1"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="modalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content p-4">
+          <div class="d-flex align-items-center justify-content-center modal-header border-0">
+            <h5 class="modal-title" id="modalLabel">Escolha o tipo de cadastro</h5>
+          </div>
+          <div class="modal-body d-flex justify-content-around">
+            <button id="btnPF" type="button" class="btn btn-custom">Pessoa Física</button>
+            <button id="btnPJ" type="button" class="btn btn-custom">Pessoa Jurídica</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- FIM DO MODAL -->
-  <!-- IMask para máscaras de entrada -->
-  <script src="https://unpkg.com/imask"></script>
+    <!-- FIM DO MODAL -->
+    <!-- IMask para máscaras de entrada -->
+    <script src="https://unpkg.com/imask"></script>
 
-  <!-- Incluindo o Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
-    crossorigin="anonymous"></script>
+    <!-- Incluindo o Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-..."
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- Incluindo o script custom para as páginas de login e cadastro -->
-  <script type="module" src="../JS/login_cadastro.js"></script>
-</body>
-
+    <!-- Incluindo o script custom para as páginas de login e cadastro -->
+    <script type="module" src="../JS/login_cadastro.js"></script>
+  </body>
 </html>
