--- a/HTML/configuracoes.html
+++ b/HTML/configuracoes.html
@@ -93,6 +93,35 @@
             </div>
           </div>
 
+          <!-- Alterar Senha -->
+          <div class="card shadow-sm mb-4">
+            <div class="card-body">
+              <h5 class="card-title mb-3">Alterar Senha</h5>
+              <form id="formAlterarSenha">
+                <div class="mb-3">
+                  <label for="senhaAtual" class="form-label">Senha Atual</label>
+                  <input type="password" class="form-control" id="senhaAtual" required>
+                </div>
+                <div class="mb-3">
+                  <label for="senhaNova" class="form-label">Nova Senha</label>
+                  <input type="password" class="form-control" id="senhaNova" required
+                         pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&]).{8,20}$"
+                         title="A senha deve ter entre 8 e 20 caracteres, letras, números e um caractere especial">
+                  <small class="form-text text-muted">
+                    A senha deve ter entre 8 e 20 caracteres, letras, números e um caractere especial.
+                  </small>
+                </div>
+                <div class="mb-3">
+                  <label for="senhaNovaConfirm" class="form-label">Confirmar Nova Senha</label>
+                  <input type="password" class="form-control" id="senhaNovaConfirm" required>
+                </div>
+                <button type="submit" class="btn btn-primary">
+                  <i class="bi bi-key"></i> Alterar Senha
+                </button>
+              </form>
+            </div>
+          </div>
+
           <!-- Alterar Email -->
           <div class="card shadow-sm mb-4">
             <div class="card-body">
